# asv-watcher

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: code_checks.yaml  tests.yaml
asv_watcher/: __init__.py
asv_watcher/_core/: detector.py  parameters.py  regression.py  update_data.py  util.py  watcher.py
scripts/: app.py  update_data.py
tests/: test_end_to_end.py  test_watcher.py
tests/data/: README.md  index.json  info.json  regressions.xml
tests/data/graphs/arch-x86_64/branch-main/cpu-Intel(R) Core(TM) i7-10850H CPU @ 2.70GHz/machine-richard-thinkpad/num_cpu-12/os-Linux 5.8.0-53-generic/python-3.8/ram-32504400/: summary.json
tests/data/graphs/summary/: benchmarks.Benchmark.time_no_regression_spike.json  benchmarks.Benchmark.time_standard_regression.json  benchmarks.BenchmarkWithParameter.time_standard_regression_parametrized.json
